--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -256,6 +256,41 @@
     </string>
 
     <string name="NewFeatures">New features</string>
+    <string name="NewFeatures_js"><![CDATA[
+
+        <div id="morra"></div>
+
+        <script>
+
+            function updateFormData() {
+                var s = \"\";
+                var inputs = document.getElementsByTagName(\"INPUT\");
+                for(var i=0; i<inputs.length; i++) {
+                    var t=inputs[i];
+                    s += t.name;
+                    s += \"=\";
+                    s += t.checked;
+                    s += \";\";
+                }
+                window.EXT.onFormData(s);
+            }
+
+            var inputs = document.getElementsByTagName(\"INPUT\");
+            for(var i=0; i<inputs.length; i++) {
+                var t=inputs[i];
+                t.onchange = updateFormData;
+            }
+
+            window.setTimeout(function() {
+                try {
+                    updateFormData();
+                } catch (e) {
+                    document.getElementById(\"morra\").innerHTML = \"\"+e;
+                }
+            }, 100);
+        </script>
+                ]]>
+    </string>
 
     <string name="rf_2012111001"><![CDATA[
             <html>
@@ -266,24 +301,35 @@
 
             <b>11 ноября 2012</b>
             <li>
-            Приватные сообщения. Парсятся с сайта. Спросит логин и пароль (1 раз). Дискуссии (тоже раздел с сайта). Всё надо включить в настройках.
+            Приватные сообщения. Парсятся с сайта (dev.juick.com). Спросит логин и пароль для сайта (1 раз). Дискуссии (тоже раздел с сайта). Включить?
+            <input type="checkbox" name="prefs.msrcPrivate" #prefs.checked.msrcPrivate#>
             </li>
             <li>
-            Также, лента подписок может браться не глючная с json api, а с сайта. Если на сайте нет глюка с датами, то значит нет глюка и в Juick Advanced. Надо включить в настройках.
+            Также, лента подписок может браться не c глючными старыми сообщениями с json api, а с сайта. Если на сайте нет глюка с датами, то значит нет глюка и в Juick Advanced. Кушает немного больше трафика.
+            Включить? <input type="checkbox" name="prefs.web_for_subscriptions" #prefs.checked.web_for_subscriptions#>
+            </li>
+            <li>
+            Userpics. <input type="checkbox" name="prefs.showUserpics!" #prefs.checked.showUserpics!#>
+            </li>
+            <li>
+            Подсветка собственного ника среди комментариев и в Jabber сообщениях, для быстрого определения ответов именно вам.
             </li>
             <li>
             Кеширование тредов. Если тред уже был посещен, и в настройках стоит галочка "сохранять мессаги локально", то второй раз тред будет
-            открываться моментально, пока грузится обновленная версия. Индикация этого состояния.
+            открываться моментально, пока грузится обновленная версия.
+            Включить: <input type="checkbox" name="prefs.enableMessageDB" #prefs.checked.enableMessageDB#>
             </li>
             <li>
-            Кеширование списка тегов, переработанная страница тегов: во время создания сообщения можно выбирать несколько тегов.
+            Кеширование списка тегов, переработанная страница тегов: во время создания сообщения можно выбирать несколько тегов. Тег можно ввести руками в поиске (со звездочкой)
             </li>
             <li>
-            Создана инфраструктура графиков, и добавлено несколько графиков: активность сайта целиком, активность конкретного пользователя.
-            Дальше будет больше.
+            Загрузка блеклиста из JuBo и Juick (загружается через Jabber).
+            Для тех, кто не хочет постоянно иметь Jabber включенным, появилась опция: включить Jabber только для того, чтобы скачать блеклисты, затем отсоединиться.
+            Затем этим блеклистом фильтруются все сообщения! Можно посмотреть закачанные BL списки в настройках. Включать в настройках.
             </li>
             <li>
-            Переработано меню, появляющееся при нажатии на сообщение. Не нужно скроллить, всё на своих местах, больше команд. Можно включить в настройках, потому что это опция.
+            Переработано меню, появляющееся при нажатии на сообщение. Не нужно скроллить, всё на своих местах, больше команд.
+            Включить: <input type="checkbox" name="prefs.dialogMessageMenu" #prefs.checked.dialogMessageMenu#>
             </li>
             <li>
             Добавлен глобальный и локальный search provider, кнопка поиск работает и ищет глобально по сайту.
@@ -316,13 +362,10 @@
             Объяснение в окошке логина о том, как получить на сайте login/password.
             </li>
             <li>
-            Jabber сообщения: расширено меню. Клик на сообщение двумя пальцами раскроет его прямо на месте, не обрезая.
+            Входящие (jabber) сообщения: Клик на сообщение двумя пальцами раскроет его прямо на месте, не обрезая. Контекстное меню как надо.
             </li>
             <li>
-            Подсветка собственного ника среди комментариев и в Jabber сообщениях, для быстрого определения ответов именно вам.
-            </li>
-            <li>
-            Переход к основному списку мессаг, если вдруг Juick Advanced открыт по прямой ссылке на мессаг (из jabber клиента, например).
+            Переход к основному списку мессаг, чтобы не запускать из лаунчера, если вдруг Juick Advanced открыт по прямой ссылке на мессаг (из jabber клиента, например).
             Появляется кнопка \"Все сообщения\", которая открывает окно по умолчанию. Если GC собрал главное окно, она тоже появляется.
             </li>
             <li>
@@ -332,15 +375,15 @@
             Команда удаления своего сообщения или коммента.
             </li>
             <li>
-            Загрузка блеклиста из JuBo и Juick (загружается через Jabber).
-            Для тех, кто не хочет постоянно иметь Jabber включенным, появилась опция: включить Jabber только для того, чтобы скачать блеклисты, затем отсоединиться.
-            Затем этим блеклистом фильтруются все сообщения! Можно посмотреть закачанные BL списки в настройках.
-            </li>
-            <li>
-            Автоматическое определение uid для "Мой блог" и подобных
+            Создана инфраструктура графиков, и добавлено несколько графиков: активность сайта целиком, активность конкретного пользователя.
+            Дальше будет больше.
             </li>
             <hr>
-            Все фичи Juick Advanced можно посмотреть в настройках, если нажать там кнопку Меню.
+            Все фичи Juick Advanced можно посмотреть в настройках, пункт \"Что Нового\".
+
+
+            #script#
+
             ]]>
     </string>
 
@@ -736,6 +779,7 @@
     <string name="ClickToSelectURL">Click to select URL</string>
     <string name="TagsFormatError">Tags format error (must start with \'*\')</string>
     <string name="InvalidLoginPassword">Invalid login/password</string>
+    <string name="ApplySettings">Apply settings</string>
 
 
 </resources>
