--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -305,7 +305,8 @@
             <input type="checkbox" name="prefs.msrcPrivate" #prefs.checked.msrcPrivate#>
             </li>
             <li>
-            Также, лента подписок может браться не c глючными старыми сообщениями с json api, а с сайта. Если на сайте нет глюка с датами, то значит нет глюка и в Juick Advanced. Кушает немного больше трафика.
+            Также, и лента подписок может браться не c глючными старыми сообщениями с json api, а с сайта. Если на сайте нет глюка с датами, то значит нет глюка и в Juick Advanced.
+            Кушает немного больше трафика.
             Включить? <input type="checkbox" name="prefs.web_for_subscriptions" #prefs.checked.web_for_subscriptions#>
             </li>
             <li>
@@ -316,7 +317,7 @@
             </li>
             <li>
             Кеширование тредов. Если тред уже был посещен, и в настройках стоит галочка "сохранять мессаги локально", то второй раз тред будет
-            открываться моментально, пока грузится обновленная версия.
+            открываться моментально, пока грузится обновленная версия. И если постараться, даже можно заметить маркер с которого начинаются новые ответы.
             Включить: <input type="checkbox" name="prefs.enableMessageDB" #prefs.checked.enableMessageDB#>
             </li>
             <li>
