--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
 
     <string name="Juick">Juick Advanced</string>
     <string name="Loading___">Loading...</string>
+    <string name="Loading___report">Loading... Complex report may take minute or two...</string>
     <string name="LoadingBackup___">Loading (backup)...</string>
     <string name="Please_wait___">Please wait...</string>
     <string name="OK">OK</string>
@@ -301,8 +302,9 @@
 
             <b>11 ноября 2012</b>
             <li>
-            Приватные сообщения. Парсятся с сайта (dev.juick.com). Спросит логин и пароль для сайта (1 раз). Дискуссии (тоже раздел с сайта). Включить?
+            Приватные сообщения. Парсятся с нового сайта (dev.juick.com). Спросит логин и пароль для сайта (1 раз). Дискуссии (тоже раздел с сайта). Включить?
             <input type="checkbox" name="prefs.msrcPrivate" #prefs.checked.msrcPrivate#>
+            Дискуссии (тоже раздел с сайта). Включить? <input type="checkbox" name="prefs.msrcDiscuss" #prefs.checked.msrcDiscuss#>
             </li>
             <li>
             Также, и лента подписок может браться не c глючными старыми сообщениями с json api, а с сайта. Если на сайте нет глюка с датами, то значит нет глюка и в Juick Advanced.
@@ -310,14 +312,14 @@
             Включить? <input type="checkbox" name="prefs.web_for_subscriptions" #prefs.checked.web_for_subscriptions#>
             </li>
             <li>
-            Userpics. <input type="checkbox" name="prefs.showUserpics!" #prefs.checked.showUserpics!#>
+            Userpics. То есть аватарки. <input type="checkbox" name="prefs.showUserpics!" #prefs.checked.showUserpics!#>
             </li>
             <li>
             Подсветка собственного ника среди комментариев и в Jabber сообщениях, для быстрого определения ответов именно вам.
             </li>
             <li>
             Кеширование тредов. Если тред уже был посещен, и в настройках стоит галочка "сохранять мессаги локально", то второй раз тред будет
-            открываться моментально, пока грузится обновленная версия. И если постараться, даже можно заметить маркер с которого начинаются новые ответы.
+            открываться моментально, пока грузится обновленная версия. И если постараться, даже можно заметить маркер, с которого начинаются новые ответы.
             Включить: <input type="checkbox" name="prefs.enableMessageDB" #prefs.checked.enableMessageDB#>
             </li>
             <li>
@@ -349,6 +351,19 @@
             Правильно показываются наклонный, жирный стили и подчеркивание в тексте мессагах. Выделять жирным итд в написуемых мессагах, понятно, надо как и раньше.
             </li>
             <li>
+            Входящие (jabber) сообщения: Клик на сообщение двумя пальцами раскроет его прямо на месте, не обрезая. Контекстное меню как надо.
+            </li>
+            <li>
+            Переход к основному списку мессаг, чтобы не запускать из лаунчера, если вдруг Juick Advanced открыт по прямой ссылке на мессаг (из jabber клиента, например).
+            Появляется кнопка \"Все сообщения\", которая открывает окно по умолчанию. Если GC собрал главное окно, она тоже появляется.
+            </li>
+            <li>
+            Более правильное позиционирование всплывающей подсказки с цепочкой ответов во перед написанием коммента.
+            </li>
+            <li>
+            Команда удаления своего сообщения или коммента.
+            </li>
+            <li>
             Еще больше оптимизирован рендеринг и плавность, т.к. больше процессинга вынесено из UI thread.
             Пофикшены гигантские меморилики связанные с WebView/картинками,
             и добавлена строка с размером заюзанной кучи в окошко с XMPP Info.
@@ -361,19 +376,6 @@
             </li>
             <li>
             Объяснение в окошке логина о том, как получить на сайте login/password.
-            </li>
-            <li>
-            Входящие (jabber) сообщения: Клик на сообщение двумя пальцами раскроет его прямо на месте, не обрезая. Контекстное меню как надо.
-            </li>
-            <li>
-            Переход к основному списку мессаг, чтобы не запускать из лаунчера, если вдруг Juick Advanced открыт по прямой ссылке на мессаг (из jabber клиента, например).
-            Появляется кнопка \"Все сообщения\", которая открывает окно по умолчанию. Если GC собрал главное окно, она тоже появляется.
-            </li>
-            <li>
-            Более правильное позиционирование всплывающей подсказки с цепочкой ответов во перед написанием коммента.
-            </li>
-            <li>
-            Команда удаления своего сообщения или коммента.
             </li>
             <li>
             Создана инфраструктура графиков, и добавлено несколько графиков: активность сайта целиком, активность конкретного пользователя.
@@ -655,7 +657,8 @@
             На сервер <b><i>ja.ip.rt.ru</i></b> (Juick Advanced server, JA) уходят ваши запросы на мессаги и треды,
              в случаях когда сервер может заменить juick.com, если вы настроили это. Туда не уходит ваша авторизация,
              и поэтому запросы на вашу персональную ленту сервер не обрабатывает. Также туда не идут запросы на
-             top и сообщения с картинками.
+             top и сообщения с картинками. Туда же идут запросы за графиками.
+
              <br>
              <hr/>
             Собранная анонимная информация будет использована для
