--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -318,7 +318,7 @@
             Подсветка собственного ника среди комментариев и в Jabber сообщениях, для быстрого определения ответов именно вам.
             </li>
             <li>
-            Кеширование тредов. Если тред уже был посещен, и в настройках стоит галочка "сохранять мессаги локально", то второй раз тред будет
+            Кеширование тредов. Если тред уже был посещен, и в настройках стоит галочка \"сохранять мессаги локально\", то второй раз тред будет
             открываться моментально, пока грузится обновленная версия. И если постараться, даже можно заметить маркер, с которого начинаются новые ответы.
             Включить: <input type="checkbox" name="prefs.enableMessageDB" #prefs.checked.enableMessageDB#>
             </li>
@@ -348,7 +348,7 @@
             Окно настроек теперь с категориями.
             </li>
             <li>
-            Правильно показываются наклонный, жирный стили и подчеркивание в тексте мессагах. Выделять жирным итд в написуемых мессагах, понятно, надо как и раньше.
+            Правильно показываются наклонный, жирный стили и подчеркивание в тексте мессаг. Выделять жирным итд в написуемых мессагах, понятно, надо как и раньше.
             </li>
             <li>
             Входящие (jabber) сообщения: Клик на сообщение двумя пальцами раскроет его прямо на месте, не обрезая. Контекстное меню как надо.
@@ -784,6 +784,8 @@
     <string name="TagsFormatError">Tags format error (must start with \'*\')</string>
     <string name="InvalidLoginPassword">Invalid login/password</string>
     <string name="ApplySettings">Apply settings</string>
+    <string name="JuickBadMimetype">Juick does not accept this type of attachment</string>
+    <string name="SkippingResize" formatted="false">Skipping resize dialog, image %d KB, dimension %d x %d</string>
 
 
 </resources>
