mostly working refactored for generic id

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -354,8 +354,12 @@
     <string name="TagsFormatError">Теги должны начинаться со звездочки</string>
     <string name="InvalidLoginPassword">Неверный логин/пароль</string>
     <string name="ApplySettings">Apply settings</string>
-    <string name="JuickBadMimetype">Файл такого типа не попадет на Juick, пользуем только jpg/3gpp/mp4</string>
+    <string name="JuickBadMimetype" formatted="false">Файл такого типа (%s) не попадет на Juick, пользуем только jpg/3gpp/mp4</string>
     <string formatted="false" name="SkippingResize">Пропускаем уменьшалку, файл %d КБ, картинка %d x %d точек</string>
+    <string name="ForcedAttachment">Приложение неизвестного файла</string>
+    <string name="AsJPEG">Это JPEG</string>
+    <string name="AsMP4Video">Это MP4 video</string>
+    <string name="navigationBNWFeed">BNW Моё</string>
 
 
 </resources>
