half done psto auth

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -381,6 +381,9 @@
             Создана инфраструктура графиков, и добавлено несколько графиков: активность сайта целиком, активность конкретного пользователя.
             Дальше будет больше.
             </li>
+            <li>
+            Поддержка BnW и psto.
+            </li>
             <hr>
             Все фичи Juick Advanced можно посмотреть в настройках, пункт \"Что Нового\".
 
