+ opening psto and bnw messages from browser, added handler in progress of send new msg + adding acra, removing quist.app.errorreporter

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -73,6 +73,9 @@
 
     <!-- NewMessageActivity -->
     <string name="Juick__New_message">Juick: Новое сообщение</string>
+    <string name="BnW__New_message">BnW: Новое сообщение</string>
+    <string name="Psto__New_message">psto: Новое сообщение</string>
+    <string name="New_message">Новое сообщение</string>
     <string name="To__All">Кому: Всем</string>
     <string name="Attach">Добавить</string>
     <string name="Photo_from_gallery">Фото из галереи</string>
