websockets and extxmpp mostly working

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -370,6 +370,7 @@
     <string name="navigationPSTOMy">psto.Блог</string>
     <string name="navigationPSTOPopular">psto.Популярные</string>
     <string name="UnreadMessagesNotification">Уведомл. о сообщениях</string>
+    <string name="IsNotEnabledOrServiceIsNotRunning">не включено или сервис не работает</string>
     <string name="SubCommentsNotification___">Уведомления о подписках и ответах через Juick Advanced server
         (исключая приватные)
     </string>
